--- a/styles/main.css
+++ b/styles/main.css
@@ -9,85 +9,73 @@ body {
   text-align: center;
   position: relative;
   background-color: lightgrey; }
-
-.watch__title {
-  padding-top: 200px;
-  margin-top: 0; }
-
-.watch__digit-top_text-style,
-.watch__digit-right_text-style,
-.watch__digit-bottom_text-style,
-.watch__digit-left_text-style {
-  font-size: 70px;
-  width: 80px; }
-
-.watch__digit-top {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%); }
-
-.watch__digit-right {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%); }
-
-.watch__digit-bottom {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%); }
-
-.watch__digit-left {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%); }
-
-.watch__center {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  position: absolute;
-  z-index: 3;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background-color: purple; }
-
-.watch__minutes {
-  height: 30px;
-  width: 400px;
-  border-radius: 20px;
-  position: absolute;
-  z-index: 1;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  background-color: blue;
-  -webkit-animation: time 3600s backwards infinite linear;
-          animation: time 3600s backwards infinite linear; }
-
-.watch__seconds {
-  height: 25px;
-  width: 450px;
-  border-radius: 15px;
-  position: absolute;
-  z-index: 2;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  background-color: purple;
-  -webkit-animation: time 60s backwards infinite linear;
-          animation: time 60s backwards infinite linear; }
+  .watch__title {
+    padding-top: 200px;
+    margin-top: 0; }
+  .watch__digit-top_text-style, .watch__digit-right_text-style, .watch__digit-bottom_text-style, .watch__digit-left_text-style {
+    font-size: 70px;
+    width: 80px; }
+  .watch__digit-top {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  .watch__digit-right {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%); }
+  .watch__digit-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  .watch__digit-left {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%); }
+  .watch__center {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 3;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    background-color: purple; }
+  .watch__minutes {
+    height: 30px;
+    width: 400px;
+    border-radius: 20px;
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+    background-color: blue;
+    -webkit-animation: time 3600s backwards infinite linear;
+            animation: time 3600s backwards infinite linear; }
+  .watch .watch__seconds {
+    height: 25px;
+    width: 450px;
+    border-radius: 15px;
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+    background-color: purple;
+    -webkit-animation: time 60s backwards infinite linear;
+            animation: time 60s backwards infinite linear; }
 
 @-webkit-keyframes time {
   from {
